[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-rmrk-tools"
description = "Python port of Typescript rmrk-tools."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["rmrk", "nft", "kusama", "polkadot"]
authors = [{ name = "Alisher A. Khassanov", email = "a.khssnv@gmail.com" }]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/khssnv/py-rmrk-tools"

[project.optional-dependencies]
all = [
    "pytest >=5.2,<6.0.0",
    "ipython >=7.30.1,<8.0.0",
    "black >=21.12b0,<22.0",
    "flake8 >=4.0.1,<5.0.0",
    "isort >=5.10.1,<6.0.0",
    "pre-commit >=2.16.0,<3.0.0",
    "pylint >=2.12.2,<3.0.0",
]

[tool.hatch.build]
include = ["rmrk_tools"]

[tool.hatch.version]
path = "rmrk_tools/__init__.py"

[tool.black]
line-length = 88
target-version = ["py310"]
experimental_string_processing = true

[tool.isort]
profile = "black"
multi_line_output = 3
